classDiagram
    direction TB

    namespace geode_dto {
        class BroadcastContent {
            <<DTO>>
            Long id
            String content
            String status
            String priority
            String category
            long expiresAtEpochMilli
            boolean fireAndForget
        }
        class ConnectionHeartbeat {
            <<DTO>>
            String userId
            long lastHeartbeatTimestamp
        }
        class GeodeSsePayload {
            <<DTO>>
            String targetClusterPodName
            MessageDeliveryEvent event
        }
        class UserConnectionInfo {
            <<DTO>>
            String userId
            String connectionId
            String podName
            String clusterName
            long connectedAtEpochMilli
        }
        class UserMessageInbox {
            <<DTO>>
            Long messageId
            Long broadcastId
            String deliveryStatus
            String readStatus
            long createdAtEpochMilli
        }
    }

    namespace shared_dto {
        class MessageDeliveryEvent {
            <<DTO>>
            String eventId
            Long broadcastId
            String userId
            String eventType
            long timestampEpochMilli
            String message
            String errorDetails
            boolean fireAndForget
        }
        class ErrorResponse {
            <<DTO>>
            OffsetDateTime timestamp
            int status
            String error
            String message
            String path
        }
    }

    namespace admin {
        class BroadcastRequest {
            <<DTO>>
            String senderId
            String senderName
            String content
            String targetType
            List~String~ targetIds
            String priority
            String category
            OffsetDateTime scheduledAt
            OffsetDateTime expiresAt
            boolean isImmediate
            boolean fireAndForget
        }
        class BroadcastResponse {
            <<DTO>>
            Long id
            String content
            String status
            OffsetDateTime createdAt
            OffsetDateTime scheduledAt
            Integer totalTargeted
            Integer totalDelivered
            Integer totalRead
        }
        class DltMessage {
            <<DTO>>
            String id
            Long broadcastId
            String originalKey
            String originalTopic
            int originalPartition
            long originalOffset
            String exceptionMessage
            String exceptionStackTrace
            OffsetDateTime failedAt
            String originalMessagePayload
        }
        class RedriveAllResult {
            <<DTO>>
            int totalMessages
            int successCount
            int failureCount
            List~RedriveFailureDetail~ failures
        }
        class RedriveFailureDetail {
            <<DTO>>
            String dltMessageId
            String reason
        }
    }

    namespace user {
        class UserBroadcastResponse {
            <<DTO>>
            Long broadcastId
            String userId
            String content
            String readStatus
            String deliveryStatus
            String priority
            String category
            OffsetDateTime broadcastCreatedAt
        }
        class MessageReadRequest {
            <<DTO>>
            String userId
            Long broadcastId
        }
    }

    
    RedriveAllResult "1" *-- "1" RedriveFailureDetail : contains
    GeodeSsePayload o-- "1" MessageDeliveryEvent : contains